--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.0",
     "express-handlebars": "^4.0.3",
     "express-session": "^1.16.1",
+    "mysql": "^2.18.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -30,7 +31,7 @@
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.2",
-    "mocha": "^5.2.0",
+    "mocha": "^7.1.2",
     "prettier": "^1.13.7"
   }
 }
