--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,25 @@
 {
   "development": {
-    "username": "root",
-    "password": "jhu@2020",
-    "database": "passport_demo",
-    "host": "127.0.0.1",
+    "username": "akrncysslxy79b2v",
+    "password": "lek7uyjlluphvxs4",
+    "port": 3306,
+    "database": "e27tfzexux5zzp3a",
+    "host": "fnx6frzmhxw45qcb.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "database_test",
-    "host": "127.0.0.1",
+    "host": "akrncysslxy79b2v@fnx6frzmhxw45qcb.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "database_production",
-    "host": "127.0.0.1",
+    "host": "akrncysslxy79b2v@fnx6frzmhxw45qcb.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
 }
