added links to front end

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.0",
     "express-handlebars": "^4.0.3",
     "express-session": "^1.16.1",
+    "jaws": "^0.12.1",
     "mysql": "^2.18.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
